# audiobookself_client

./: Cargo.toml  flake.nix
audiobookshelf_api/: .env.example  Cargo.toml
audiobookshelf_api/examples/: simple.rs
audiobookshelf_api/src/: errors.rs  lib.rs  params.rs  schema.rs
audiobookshelf_client/: Cargo.toml
audiobookshelf_client/src/: main.rs
