[package]
name = "audiobookshelf_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.4", default-features=false, features = ["rustls-tls-native-roots", "http2", "charset"]}
tokio = {version = "1.37", features = ["rt", "macros"]}
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
thiserror = "1.0"
base64 = "0.22.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"

[[example]]
name = "simple"

