[package]
name = "audiobookshelf_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.38", features = ["rt-multi-thread", "macros"]}
audiobookshelf_api = {path = "../audiobookshelf_api"}
rodio = "0.19"
anyhow = "1.0"
axum = "0.7"

serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
